# vaultar

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-package.yml
tests/: test_vaultar.py
vaultar/: cli.py  config.py  logger.py
vaultar/core/: backup.py  restore.py  validation.py
vaultar/ui/: progress.py
